HU22 T22.01 Realizar diseño para la configuración (CRUD) del cumplimiento de las metas

--- a/GestionPOA/Views/Admin/Index.cshtml
+++ b/GestionPOA/Views/Admin/Index.cshtml
@@ -181,6 +181,22 @@
                             </ul>
                         </div>
                     </li>
+                    <li>
+                        <a data-toggle="collapse" href="#configuracion">
+                            <i class="material-icons">build</i>
+                            <p>
+                                Configuraciones
+                                <b class="caret"></b>
+                            </p>
+                        </a>
+                        <div class="collapse" id="configuracion">
+                            <ul class="nav">
+                                <li style="padding-left:12px;">
+                                    <a href="#!/Periodicidad"> <i class="material-icons" style="color: #4caf50;">add</i>Periodicidad</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
