--- a/GestionPOA/App/Views/periodicidad/index.html
+++ b/GestionPOA/App/Views/periodicidad/index.html
@@ -7,13 +7,13 @@
             </div>
             <div class="card-content">
                 <h4 class="card-title">:: Registrar Periodicidad ::</h4>
-                <form name="AddPeriodicidadForm" ng-submit="vm.addPeriodicidad();" novalidate>
+                <form name="AddPeriodicidadForm" ng-submit="vm.addPeriocidad()" novalidate>
                     <div class="form-group label-floating">
                         <label class="control-label">PERIOCIDAD</label>
-                        <select class="form-control col-lg-12 col-md-12" ng-model="vm.Periodicidad.Periodo"  required>
+                        <select class="form-control col-lg-12 col-md-12" ng-model="vm.Periodo"  required>
                             <option value="">-- Seleccione --</option>
                             <option value="Anual">Anual</option>
-                            <option value="Trismestral">Trismestral</option>
+                            <option value="Trimestral">Trismestral</option>
                         </select>
                     </div>
                     <input type="submit" value="Registrar" class="btn btn-fill btn-success" ng-disabled="AddPeriodicidadForm.$invalid" />
@@ -31,12 +31,10 @@
                     <table class="table table-hover">
                         <thead class="text-warning">
                         <th>Descripción</th>
-                        <th> </th>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="estrategias in vm.listadoEstrategias">
-                                <td ng-click="vm.cargarIndicadores(estrategias.EstrategiasId,estrategias.Descripcion)" style="cursor:pointer;">{{estrategias.Descripcion}}</td>
-                                <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleEstrategia" style="cursor:pointer;" ng-click="vm.detalleEstrategias(estrategias.EstrategiasId)" class="text-success">ver más</span></td>
+                            <tr ng-repeat="periocidad in vm.listPeriocidiades">
+                                <td ng-click="vm.cargarIntervalos(periocidad.id,periocidad.Periodo)" style="cursor:pointer;">{{periocidad.Periodo}}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -48,8 +46,8 @@
                 <div class="card-header card-header-tabs" data-background-color="green">
                     <div class="nav-tabs-navigation">
                         <div class="nav-tabs-wrapper">
-                            <a ng-show="vm.appstate =='showAdd'" class="ui olive label" data-toggle="modal" data-target="#myModal" ng-click="vm.ventanaIndicador()"><i class="add icon"></i>Indicador</a>
-                            <span class="nav-tabs-title"><b>INVERTALOS:</b> {{vm.estrategia }}</span>
+                            <a ng-show="vm.appstate =='showAdd'" class="ui olive label" data-toggle="modal" data-target="#myModal" ng-click="vm.IntervaloModal()"><i class="add icon"></i>Intervalo</a>
+                            <span class="nav-tabs-title"><b>PERIOCIDAD:</b> {{vm.periocidad }}</span>
                             <ul class="nav nav-tabs" data-tabs="tabs"></ul>
                         </div>
                     </div>
@@ -58,16 +56,16 @@
                     <table class="table">
                         <thead class="text-warning">
                         <th>Intervalos</th>
-                        <th>Acciones</th>
+                        <th class="text-center">Acciones</th>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="indicadores in vm.listadoIndicadores">
-                                <td>{{indicadores.Descripcion}}</td>
+                            <tr ng-repeat="intervalo in vm.listadoIntervalos">
+                                <td>{{intervalo.Descripcion}}</td>
                                 <td title="'Acciones'" class="td-actions text-center">
-                                    <button type="button" rel="tooltip" title="Editar" data-toggle="modal" data-target="#myModalUpdate" ng-click="vm.ventanaModalIndicadores(indicadores)" class="btn btn-success btn-round">
+                                    <button type="button" rel="tooltip" title="Editar" data-toggle="modal" data-target="#myModalUpdate" ng-click="vm.ventanaModalIntervalo(intervalo)" class="btn btn-success btn-round">
                                         <i class="material-icons">edit</i>
                                     </button>
-                                    <button type="submit" rel="tooltip" title="Eliminar" class="btn btn-danger btn-round" ng-click="vm.deleteIndicador(indicadores.IndicadorId, $index)">
+                                    <button type="submit" rel="tooltip" title="Eliminar" class="btn btn-danger btn-round" ng-click="vm.deleteIntervalo(intervalo.id, $index)">
                                         <i class="material-icons">close</i>
                                     </button>
                                 </td>
@@ -78,4 +76,109 @@
             </div>
         </div>
     </div>
+    <!-- MODAL INTERVALO INSERT -->
+    <div id="myModal" class="modal fade">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title text-success">:: Agregar Intervalo ::</h4>
+                </div>
+                <form name="addIntervaloForm" class="ui form" ng-submit="vm.addIntervalo()" novalidate>
+                    <div class="modal-body">
+                        <div class="form-group label-floating">
+                            <label class="control-label"><span class="text-success"><b>PERIOCIDAD: </b> </span> {{vm.periocidad | uppercase}} </label>
+                        </div>
+                        <br />
+                        <div class="form-group label-floating">
+                            <label class="control-label" style="font-size:12px;">INTERVALO</label>
+                            <div class="form-group">
+                                <input type="text" class="form-control" ng-model="vm.modalIntervalo.Descripcion" required>
+                            </div>
+                        </div>
+                        <div class="form-group label-floating">
+                            <label class="control-label" style="font-size:12px;">ORDEN</label>
+                            <div class="form-group">
+                                <select ng-if="vm.periocidad=='Trimestral'" class="form-control col-lg-12 col-md-12" ng-model="vm.modalIntervalo.Orden" required>
+                                    <option value="">-- Seleccione --</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                </select>
+                                <select ng-if="vm.periocidad=='Anual'" class="form-control col-lg-12 col-md-12" ng-model="vm.modalIntervalo.Orden" required>
+                                    <option value="">-- Seleccione --</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                </select>
+                            </div>
+                        </div>
+                        <input type="hidden" ng-model="vm.modalIntervalo.PeriodoId" ng-value="vm.modalIntervalo.PeriodoId">
+                        <input type="hidden" ng-model="vm.modalIntervalo.eliminado" ng-value="vm.modalIntervalo.eliminado = 0">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-fill btn-success" ng-disabled="addIntervaloForm.$invalid">Registrar <i class="add icon"></i></button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close <i class="remove icon"></i></button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- END MODAL INTERVALO INSERT -->
+    <!-- MODAL INTERVALO UPDATE -->
+    <div id="myModalUpdate" class="modal fade">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title text-success">:: Actualizar Indicador ::</h4>
+                </div>
+                <form name="updateIntervaloForm" class="ui form" ng-submit="vm.updateIntervalo()" novalidate>
+                    <div class="modal-body">
+                        <div class="form-group label-floating">
+                            <label class="control-label"><span class="text-success"><b>PERIOCIDAD: </b> </span> {{vm.periocidad | uppercase}}</label>
+                        </div>
+                        <br />
+                        <div class="form-group label-floating">
+                            <label class="control-label" style="font-size:12px;">INTERVALO</label>
+                            <div class="form-group">
+                                <input type="text" class="form-control" ng-model="vm.modalupadteIntervalo.Descripcion" required>
+                            </div>
+                        </div>
+                        <div class="form-group label-floating">
+                            <label class="control-label" style="font-size:12px;">ORDEN</label>
+                            <div class="form-group">
+                                <select ng-if="vm.periocidad=='Trimestral'" class="form-control col-lg-12 col-md-12" ng-value="vm.modalupadteIntervalo.Orden" ng-model="vm.modalupadteIntervalo.Orden" required>
+                                    <option value="">-- Seleccione --</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                </select>
+                                <select ng-if="vm.periocidad=='Anual'" class="form-control col-lg-12 col-md-12"  ng-value="vm.modalupadteIntervalo.Orden" ng-model="vm.modalupadteIntervalo.Orden" required>
+                                    <option value="">-- Seleccione --</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                </select>
+                            </div>
+                        </div>
+                        <input type="hidden" ng-model="vm.modalupadteIntervalo.id" ng-value="vm.modalupadteIntervalo.id">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-fill btn-success" ng-disabled="updateIntervaloForm.$invalid">Actualizar <i class="add icon"></i></button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close <i class="remove icon"></i></button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- END MODAL INTERVALO UPDATE -->
 </div>
