HU24 T24.01 Realizar diseño para el CRUD

--- a/GestionPOA/Views/Admin/Index.cshtml
+++ b/GestionPOA/Views/Admin/Index.cshtml
@@ -162,21 +162,11 @@
                                 <li style="padding-left:12px;">
                                     <a href="#!/Metas/Asignacion"> <i class="material-icons" style="color: #4caf50;">library_add</i>Asignacion</a>
                                 </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li>
-                        <a data-toggle="collapse" href="#acciones">
-                            <i class="material-icons">text_format</i>
-                            <p>
-                                Acciones
-                                <b class="caret"></b>
-                            </p>
-                        </a>
-                        <div class="collapse" id="acciones">
-                            <ul class="nav">
                                 <li style="padding-left:12px;">
-                                    <a href="#!/Metas/Acciones"> <i class="material-icons" style="color: #4caf50;">add</i>Nuevo</a>
+                                    <a href="#!/Metas/Acciones"> <i class="material-icons" style="color: #4caf50;">text_format</i>Acciones</a>
+                                </li>
+                                <li style="padding-left:12px;">
+                                    <a href="#!/Metas/Informacion/Adicional"> <i class="material-icons" style="color: #4caf50;">info</i>Fórmula Cálculo</a>
                                 </li>
                             </ul>
                         </div>
