--- a/GestionPOA/App/Views/informacion/index.html
+++ b/GestionPOA/App/Views/informacion/index.html
@@ -37,12 +37,14 @@
                         <thead class="text-warning">
                         <th style="font-size:14px;">Fórmula Cálculo</th>
                         <th style="font-size:14px;">Línea Base</th>
+                        <th style="font-size:14px;">Método Evaluación</th>
                         <th>Acciones </th>
                         </thead>
                         <tbody>
                             <tr ng-repeat="formulacalculo in ctlInfo.listFormulasCalculos">
                                 <td>{{formulacalculo.FormulaCalculo}}</td>
                                 <td>{{formulacalculo.LineaBase}}</td>
+                                <td>{{formulacalculo.MetodoEvaluacion}}</td>
                                 <td title="'Acciones'" class="td-actions text-center">
                                     <button type="button" rel="tooltip" title="Editar" data-toggle="modal" data-target="#myModalUpdate" ng-click="ctlInfo.updateVentanaModal(formulacalculo)" class="btn btn-success btn-round">
                                         <i class="material-icons">edit</i>
@@ -134,6 +136,12 @@
                                 <input type="text" class="form-control" ng-model="ctlInfo.modalFormulaCalculo.LineaBase" required>
                             </div>
                         </div>
+                        <div class="form-group label-floating">
+                            <label class="control-label" style="font-size:12px;">Método de Evaluación</label>
+                            <div class="form-group">
+                                <input type="text" class="form-control" ng-model="ctlInfo.modalFormulaCalculo.MetodoEvaluacion" required>
+                            </div>
+                        </div>
                         <input type="hidden" ng-model="ctlInfo.modalFormulaCalculo.metasId" ng-value="ctlInfo.modalFormulaCalculo.metasId">
                     </div>
                     <div class="modal-footer">
@@ -170,6 +178,12 @@
                             <label class="control-label" style="font-size:12px;">Línea Base</label>
                             <div class="form-group">
                                 <input type="text" class="form-control" ng-model="ctlInfo.modalUpdateFormulaCalculo.LineaBase " required>
+                            </div>
+                        </div>
+                        <div class="form-group label-floating">
+                            <label class="control-label" style="font-size:12px;">Método de Evaluación</label>
+                            <div class="form-group">
+                                <input type="text" class="form-control" ng-model="ctlInfo.modalUpdateFormulaCalculo.MetodoEvaluacion " required>
                             </div>
                         </div>
                     </div>
