HU26 T26.01 y T26.02 diseño y Codifcar las funcionalidades para ingresar una observación a cada planificación en caso de no cumplir con la planificación

--- a/GestionPOA/App/Views/metas/ejecucion.html
+++ b/GestionPOA/App/Views/metas/ejecucion.html
@@ -10,61 +10,65 @@
                     <form name="categoryForm">
                         <table class="table table-hover">
                             <thead class="text-warning">
-                                <tr class="text-center" style="font-size:13px;">
-                                    <th rowspan="2">Cualitativo</th>
-                                    <th rowspan="2" width="60%">Metas</th>
-                                    <th rowspan="2"> </th>
-                                    <th colspan="4">Ejecución Trimestral en % de la meta</th>
-                                    <th rowspan="2">Presupuesto</th>
-                                    <th rowspan="2">Observación</th>
-                                    <th rowspan="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                                <tr class="text-center" style="font-size:9px;">
+                                    <th rowspan="2" class="fond">Cualitativo</th>
+                                    <th rowspan="2" width="60%" class="fond">Metas</th>
+                                    <th rowspan="2" class="fond"> </th>
+                                    <th colspan="4" class="text-center fond">Ejecución Trimestral Meta</th>
+                                    <th rowspan="2" class="fond text-center">Presupuesto</th>
+                                    <th rowspan="2" class="fond text-center">Observación</th>
+                                    <th rowspan="2" class="fond text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                                 </tr>
-                                <tr class="text-center" style="font-size:13px;">
-                                    <th class="text-center" ng-repeat="intervalo in vm.listadoIntervalos">{{intervalo.descripcion}}</th>
+                                <tr class="text-center" style="font-size:10px;">
+                                    <th class="text-center colEje" ng-repeat="intervalo in vm.listadoIntervalos">{{intervalo.descripcion}}</th>
                                 </tr>
                             </thead>
 
                             <tbody>
-                                <tr style="font-size:12px;" ng-if="vm.deparmentID!=8" class="animate-if" ng-repeat="Ejecucion in vm.listadoMetasEjecucion">
+                                <tr style="font-size:20px;" ng-if="vm.deparmentID!=8" class="animate-if" ng-repeat="Ejecucion in vm.listadoMetasEjecucion">
                                     <td class="text-center"><input type="checkbox" ng-model="checked" ng-init="checked=true" ng-disabled="true" /></td>
-                                    <td style="font-size:13px;">{{Ejecucion.Metas}}</td>
-                                    <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Ejecucion.MetaID)" class="text-success">ver más</span></td>
-                                    <td class="text-center">
+                                    <td style="font-size:12px;">{{Ejecucion.Metas}}</td>
+                                    <td style="font-size:10px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Ejecucion.MetaID)" class="text-success">ver más</span></td>
+                                    
+                                    <td class="text-center colPla">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Ejecucion.I" numbers-only max="" />
-                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal"  data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_I)">unarchive</i>
+                                            <input ng-disabled="{{vm.CurrentDate | date:'MM'}} > '3'" size="2" type="text" ng-model="Ejecucion.I" numbers-only max="" class="inpEje" ng-click="vm.searhPlanificacion(Ejecucion.MetaID,Ejecucion.ID_I)"/>
+                                            <i ng-show="vm.off9[Ejecucion.ID_I+''+Ejecucion.MetaID] != null" class="uploadIcon material-icons" style="color:coral !important;" rel="tooltip" title="Guardar" ng-click="vm.updateMetasEjecucion(Ejecucion.ID_I, Ejecucion.MetaID,Ejecucion.I)">save</i>
+                                            <i ng-show="vm.off9[Ejecucion.ID_I+''+Ejecucion.MetaID] != null" class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal"  data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_I)">unarchive</i>
+                                            <span class="planiValor">{{vm.off9[Ejecucion.ID_I+""+Ejecucion.MetaID]}}</span>
                                         </div>
                                     </td>
-                                    <td class="text-center">
+                                    <td class="text-center colPla">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Ejecucion.II" numbers-only max="" />
-                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia"  data-toggle="modal"  data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_II)">unarchive</i>
+                                            <input ng-disabled="{{vm.CurrentDate | date:'MM'}} <= '3' || {{vm.CurrentDate | date:'MM'}} >= '7'" size="2" type="text" ng-model="Ejecucion.II" numbers-only max="" class="inpEje"/>
+                                            <i ng-show="vm.off9[Ejecucion.ID_II+''+Ejecucion.MetaID] != null" class="uploadIcon material-icons" style="color:coral !important;" rel="tooltip" title="Guardar" ng-click="vm.updateMetasEjecucion(Ejecucion.ID_II, Ejecucion.MetaID)">save</i>
+                                            <i ng-show="vm.off9[Ejecucion.ID_II+''+Ejecucion.MetaID] != null" class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia"  data-toggle="modal"  data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_II)">unarchive</i>
+                                            <span class="planiValor">{{vm.off9[Ejecucion.ID_II+Ejecucion.MetaID]}}</span>
                                         </div>
                                     </td>
-                                    <td class="text-center">
+                                    <td class="text-center colPla">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Ejecucion.III" numbers-only max="" />
-                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal"  data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_III)">unarchive</i>
+                                            <input  ng-disabled="{{vm.CurrentDate | date:'MM'}} <= '6' || {{vm.CurrentDate | date:'MM'}} >= '10'" size="2" type="text" ng-model="Ejecucion.III" numbers-only max="" class="inpEje"/>
+                                            <i ng-show="vm.off9[Ejecucion.ID_III+''+Ejecucion.MetaID] != null" class="uploadIcon material-icons" style="color:coral !important;" rel="tooltip" title="Guardar" ng-click="vm.updateMetasEjecucion(Ejecucion.ID_III, Ejecucion.MetaID)">save</i>
+                                            <i ng-show="vm.off9[Ejecucion.ID_III+''+Ejecucion.MetaID] != null" class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal"  data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_III)">unarchive</i>
+                                            <span class="planiValor">{{vm.off9[Ejecucion.ID_III+Ejecucion.MetaID]}}</span>
                                         </div>
                                     </td>
-                                    <td class="text-center">
+                                    <td class="text-center colPla">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Ejecucion.IV" numbers-only max=""/>
-                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal"  data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_IV)">unarchive</i>
+                                            <input ng-disabled="{{vm.CurrentDate | date:'MM'}} <= '9' || {{vm.CurrentDate | date:'MM'}} > '12'"size="2" type="text" ng-model="Ejecucion.IV" numbers-only max="" class="inpEje"/>
+                                            <i ng-show="vm.off9[Ejecucion.ID_IV+''+Ejecucion.MetaID] != null" class="uploadIcon material-icons" style="color:coral !important;" rel="tooltip" title="Guardar" ng-click="vm.updateMetasEjecucion(Ejecucion.ID_IIV, Ejecucion.MetaID)">save</i>
+                                            <i ng-show="vm.off9[Ejecucion.ID_IV+''+Ejecucion.MetaID] != null" class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal"  data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_IV)">unarchive</i>
+                                            <span class="planiValor">{{vm.off9[Ejecucion.ID_IV+Ejecucion.MetaID]}}</span>
                                         </div>
                                     </td>
                                     <td class="text-center" style="font-size:12px;">
                                         <div class="ui input">
-                                            <input size="10" type="text" ng-model="Ejecucion.P_Ejecutado" decimal-only format="currency" />
+                                            <input size="10" type="text" ng-model="Ejecucion.P_Ejecutado" ng-blur="vm.updatePresupuestoEjecutado(Ejecucion.MetaID,Ejecucion.P_Ejecutado)" decimal-only format="currency" />
                                         </div>
                                     </td>
                                     <td class="text-center" style="font-size:12px;">
                                         <span data-toggle="modal" rel="tooltip" title="Agregar Observación" data-target="#myModalAddObservacion" style="cursor:pointer;" ng-click="vm.ObservacionDetalle(Ejecucion.MetaID)" class="text-success">Añadir</span>
-                                    </td>
-                                    <td class="td-actions text-center">
-                                        <button type="submit" rel="tooltip" title="Actualizar" ng-click="vm.updateMetasEjecucion(Ejecucion)" class="btn btn-success btn-round">
-                                            <i class="material-icons">cached</i>
-                                        </button>
                                     </td>
                                 </tr>
                                 <tr style="font-size:12px;" ng-if="vm.deparmentID==8" class="animate-if" ng-repeat="Ejecucion in vm.listadoMetasEjecucion">
@@ -145,7 +149,7 @@
                                         </button>
                                     </td>
                                 </tr>
-                                <tr><td class="text-success" data-loader colspan="9"></td></tr>
+                                <tr><td class="text-success" data-loader colspan="10"></td></tr>
                             </tbody>
                         </table>
                     </form>
