HU31 T31.01 T31.02 diseño y Codifcar las funcionalidades para observar el porcentaje de cumplimiento del Objetivo Estrategico

--- a/GestionPOA/Views/Admin/Index.cshtml
+++ b/GestionPOA/Views/Admin/Index.cshtml
@@ -86,6 +86,9 @@
                                 <li style="padding-left:12px;">
                                     <a href="#!/Objetivo/Estrategico"><i class="material-icons" style="color: #4caf50;">add</i>Nuevo</a>
                                 </li>
+                                <li style="padding-left:12px;">
+                                    <a href="#!/Objetivo/Estrategico/Ejecucion"><i class="material-icons" style="color: #4caf50;">play_circle_filled</i>Ejecución</a>
+                                </li>
                             </ul>
                         </div>
                     </li>
