HU34 T34.01 Realizar diseño para observar una alerta por cada trimestre, siempre y cuando el departamento no cumpla con lo planificado en la vista.

--- a/GestionPOA/Views/Admin/Index.cshtml
+++ b/GestionPOA/Views/Admin/Index.cshtml
@@ -214,6 +214,21 @@
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
+                                <a href="#!/Planificacion/Alertas" class="btn btn-just-icon btn-dribbble dropdown-toggle" data-toggle="dropdown" style="margin-right:25px; margin-top:7px;">
+                                    <i class="material-icons text-orange">notifications_active</i> <div class="floating ui red label">22</div>
+
+                                    <p class="hidden-lg hidden-md" style="text-align:left">
+                                        Usuario
+                                        <b class="caret"></b>
+                                    </p>
+                                </a>
+                                @*<ul class="dropdown-menu">
+                                    <li><a href="#action"><i class="material-icons">history</i> &nbsp;&nbsp;Historial</a></li>
+                                    <li><a href="#"><i class="material-icons">notifications_active</i> &nbsp;&nbsp;Notificaciones</li></a>
+                                </ul>*@
+                            </li>
+
+                            <li class="dropdown">
                                 <a href="#" class="btn btn-just-icon btn-github dropdown-toggle" data-toggle="dropdown">
                                     <i class="material-icons text-orange">https</i>
 
