--- a/GestionPOA/App/Views/alertas/index.html
+++ b/GestionPOA/App/Views/alertas/index.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="AlertasController as mv">
+﻿<div ng-controller="AlertasController as vm">
     <div class="row">
         <div class="col-lg-6 col-md-12">
             <div class="card">
@@ -8,15 +8,19 @@
                 <div class="card-content table-responsive">
                     <table class="table table-hover">
                         <thead class="text-warning">
+                        <th></th>
                         <th>Departamento</th>
-                        <th>Trimestre</th>
-                        <th>Planificado</th>
-                        <th>Ejecutado</th>
+                        <th class="text-center">Trimestre</th>
+                        <th class="text-center">Planificado</th>
+                        <th class="text-center">Ejecutado</th>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="estrategias in vm.listadoEstrategias">
-                                <td ng-click="vm.cargarIndicadores(estrategias.EstrategiasId,estrategias.Descripcion)" style="cursor:pointer;">{{estrategias.Descripcion}}</td>
-                                <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleEstrategia" style="cursor:pointer;" ng-click="vm.detalleEstrategias(estrategias.EstrategiasId)" class="text-success">ver más</span></td>
+                            <tr ng-repeat="alerta in vm.listAlertasss" ng-click="vm.ShowObservacion(alerta.observacion, alerta.id); vm.myStyle[alerta.id]={'background-color':'teal'}">
+                                <td style="background-color:red" ng-style="vm.myStyle[alerta.id]">&nbsp;</td>
+                                <td>{{alerta.nombre_subunidad}}</td>
+                                <td class="text-center">{{alerta.trimestre}}</td>
+                                <td class="text-center">{{alerta.planificado}}%</td>
+                                <td class="text-center">{{alerta.ejecutado}}%</td>
                             </tr>
                         </tbody>
                     </table>
@@ -40,16 +44,8 @@
                         <th>Mensaje</th>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="indicadores in vm.listadoIndicadores">
-                                <td>{{indicadores.Descripcion}}</td>
-                                <td title="'Acciones'" class="td-actions text-center">
-                                    <button type="button" rel="tooltip" title="Editar" data-toggle="modal" data-target="#myModalUpdate" ng-click="vm.ventanaModalIndicadores(indicadores)" class="btn btn-success btn-round">
-                                        <i class="material-icons">edit</i>
-                                    </button>
-                                    <button type="submit" rel="tooltip" title="Eliminar" class="btn btn-danger btn-round" ng-click="vm.deleteIndicador(indicadores.IndicadorId, $index)">
-                                        <i class="material-icons">close</i>
-                                    </button>
-                                </td>
+                            <tr>
+                                <td>{{vm.justifacion}}</td>
                             </tr>
                         </tbody>
                     </table>
